# ceia-ufg-workshop

./: .gitignore
.github/workflows/: deploy-ch5.yml
mlops/CH1/: README.md
mlops/CH1/practice/: docker-compose.yml
mlops/CH2/practice/: README.md  docker-compose.yml
mlops/CH2/practice/app/: main.py  schemas.py  services.py
mlops/CH3/: README.md
mlops/CH3/pratica/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  test_main.py
mlops/CH3/pratica/docs/: Dockerfile  architecture.md  configuration.md  getting-started.md  rag-pipeline.md
mlops/CH3/pratica/monolit/: Dockerfile  main.py  run.sh
mlops/CH3/pratica/monolit/docs/: architecture.md  configuration.md  getting-started.md  rag-pipeline.md
mlops/CH3/pratica/streamlit_app/: Dockerfile  pyproject.toml
mlops/CH3/pratica/vectordb/: Dockerfile
mlops/CH5/: .env.example
mlops/CH5/desafio/: Dockerfile  requirements.txt  ui_llm_service.py
mlops/CH5/pratica/: .dockerignore  Dockerfile.prod  README.md  cloudbuild.yaml
mlops/CH5/pratica/app/: client.py  models.py  prompts.py
mlops/CH5/pratica/app/routes/: chat.py
nlp/CH3/: README.md
nlp/CH4/practice/: challenge.md  requirements.txt
nlp/CH4/practice/src/: api.py  metrics.py  rag.py
nlp/CH5/practice/: .gitignore  README.md  requirements.txt
